# face_tracker_3000

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
face_tracker_3000/: aimbot.py  face_offset.py  face_offset_old.py  face_tracker_3000_node.py
face_tracker_3000/__pycache__/: aimbot.cpython-310.pyc~Stashed changes
face_tracker_3000/config/: config.yaml
launch/: camera_launch.py  face_tracker_3000_launch.py
rviz/: rviz_face-tracker-3000.rviz
